src/styles/Plants/plants.scss
.plants {
    background-color: rgba(243, 243, 243, 0.863);
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;

    &__header {
        width:100%;
        height: 70vh;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

        &__title {
            position: relative;
            text-transform: uppercase;
            letter-spacing: 0.2em;
            font-size: 3em;
            color:rgb(31, 39, 15);
            font-weight: bolder;
        }

        &__title:nth-child(3) {
            color:rgb(95, 128, 42);
            text-shadow: 0 0 1px black;
        }

        &__divider {
            position: relative;
            border: 2px solid rgb(31, 39, 15);
            border-radius: 4px;
            width: 15%;
            margin-bottom: 5em;
        }
    }

    &__header::before {
        width: 100%;
        height:80vh;
        top: 0;
        left: 0;
        content: "";
        filter: contrast(65%);
        background-image: url("../../assets/image-plants-header.jpg");
        background-repeat: no-repeat;
        background-position: center center;
        background-size: cover;
        position: absolute;
    }

    &__container {
        width: 80%;
        min-height: 100vh;
        height: fit-content;
        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
        background-color: rgb(255, 255, 255);
        transform: translateY(-15vh);
        margin-bottom: -8vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        &__items {
            width: 100%;
            height: 100%;
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: center;

            &__item:hover {
                border: 2px solid rgb(69, 94, 27);
            }

            &__item:nth-child(even) {
                flex-direction: row-reverse;
            }

            &__item {
                display: flex;
                justify-content: space-between;
                flex-direction: row;
                align-items: center;
                width: 70%;
                height: 40vh;
                margin: 1em;
               // box-shadow: 0 14px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);

                &__image {
                    height: 100%;
                    width: 25%;
                    border-radius: 5px;
                    background-position: center;
                    background-size: cover;
                    background-repeat: no-repeat;
                    filter: contrast(95%) brightness(90%);
                }

                &__content {
                    height: 100%;
                    width: 60%;
                    display: flex;
                    flex-direction: column;
                    justify-content: center;
                    align-items: center;
                    color:rgb(45, 56, 26);
                }
            }
        }

        &__buttons {
            margin-bottom: 1em;
            button {
                border: 2px solid rgb(69, 94, 27);
                text-transform: uppercase;
                font-weight: bold;
                font-size: 1.05em;
                color:rgb(45, 56, 26);
                cursor: pointer;
                padding: 0.4em 0.8em 0.4em 0.8em;
                margin: 0.5em;
                background: none;
                outline: none;
                transition: background .2s ease-in-out;
            }

            button:nth-child(2) {
                background-color: rgb(96, 131, 36);
            }

            button:focus {
                border: 2px solid rgb(45, 56, 26);
            }

            button:hover {
                background-color: rgb(69, 94, 27);
                color: white;
            }

        }
    }
}

